2004-03-24  Guilhem Lavaux <guilhem@kaffe.org>

	* gnu/testlet/java/text/SimpleDateFormat/attribute.java: New tests.

	* gnu/testlet/java/text/DecimalFormat/parse.java: Fixed test to be
	spec compliant (Long is just a guess, it may change with
	implementation).

2004-03-24  Sascha Brawer  <brawer@dandelis.ch>

	* gnu/testlet/javax/imageio, gnu/testlet/javax/imageio/spi,
	gnu/testlet/javax/imageio/spi/ServiceRegistry: New directories.
	
	* gnu/testlet/javax/imageio/spi/ServiceRegistry/
	MultiplicationService.java, MultiplierOne.java,
	MultiplierThree.java, MultiplierTwo.java, TestService.java,
	deregisterAll.java, getCategories.java,
	getServiceProviderByClass.java, lookupProviders.java,
	registerServiceProvider.java, setOrdering.java: New tests.	

2004-03-22  Ito Kazumitsu  <kaz@maczuka.gcd.org>
	* gnu/testlet/java/util/Properties/load.java: Add tests
	copied from Kaffe's regression test.

2004-03-21  Michael Koch  <konqueror@gmx.de>

	* choose, choose-classes: Added handling for suppression testcases in
	BinaryCompatibility.* namespace.

2004-03-15  Michael Koch  <konqueror@gmx.de>

	* THANKS: Added myself.

2004-03-15  Michael Koch  <konqueror@gmx.de>

	* acinclude.m4: Correctly quote in AC_DEFUN.

2004-03-14  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/System/arraycopy.java: Add tests for copying
	arrays of different dimensions.

2004-03-12  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/FilePermission/simple.java: Add test for dirs
	without a file separator.

2004-03-12  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/PrintWriter/checkError.java: New test.

2004-03-11  Mark Wielaard  <mark@klomp.org>

	* batch_run: Add jikes -bootclasspath example. Only show PASS: or
	FAIL: results (eliminate killed/terminated messages).
	* runner: Add jamvm example. Only kill when not KILLED (by timeout).
	
2004-03-11  Sascha Brawer  <brawer@dandelis.ch>

	* gnu/testlet/java/util/logging/Handler/getErrorManager.java,